--- a/index.html
+++ b/index.html
@@ -3,238 +3,266 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Alekhya Reddy | Portfolio</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>🌤 DayMate - Weather App</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    /* Global Styles */
-body {
-  font-family: 'Poppins', sans-serif;
-  margin: 0;
-  background: #f9f9f9;
-  color: #333;
-}
+    * { margin: 0; padding: 0; box-sizing: border-box; }
 
-.container {
-  width: 90%;
-  max-width: 1100px;
-  margin: auto;
-}
+    body {
+      font-family: 'Poppins', sans-serif;
+      background: linear-gradient(to bottom right, #9cd3ff, #d6efff);
+      min-height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      overflow: hidden;
+      color: #333;
+    }
 
-header {
-  background: #222;
-  color: #fff;
-  padding: 15px 0;
-  position: sticky;
-  top: 0;
-}
+    /* Floating Clouds */
+    .cloud {
+      position: absolute;
+      background: rgba(255, 255, 255, 0.9);
+      border-radius: 50%;
+      animation: float 25s linear infinite;
+    }
+    .cloud::before,
+    .cloud::after {
+      content: "";
+      position: absolute;
+      background: rgba(255, 255, 255, 0.9);
+      border-radius: 50%;
+    }
+    .cloud.one { width: 100px; height: 60px; top: 60px; left: -150px; animation-delay: 0s; }
+    .cloud.one::before { width: 60px; height: 60px; top: -20px; left: 30px; }
+    .cloud.one::after { width: 80px; height: 80px; top: -30px; left: 60px; }
+    .cloud.two { width: 80px; height: 50px; top: 200px; left: -200px; animation-delay: 10s; }
+    .cloud.two::before { width: 50px; height: 50px; top: -10px; left: 20px; }
+    .cloud.two::after { width: 70px; height: 70px; top: -20px; left: 40px; }
+    @keyframes float { 0% { transform: translateX(0); } 100% { transform: translateX(120vw); } }
 
-.logo {
-  font-size: 24px;
-  margin: 0;
-  text-transform: uppercase;
-}
+    /* Sun Animation */
+    .sun {
+      position: absolute;
+      top: 80px;
+      right: 80px;
+      width: 100px;
+      height: 100px;
+      background: radial-gradient(circle at center, #ffdf6b, #ffae00);
+      border-radius: 50%;
+      box-shadow: 0 0 30px #ffd54f;
+      animation: rotateSun 15s linear infinite;
+    }
+    @keyframes rotateSun { from { transform: rotate(0deg); } to { transform: rotate(360deg); } }
 
-.nav-links {
-  list-style: none;
-  display: flex;
-  gap: 20px;
-}
+    /* Weather Card */
+    #container {
+      background: rgba(255, 255, 255, 0.35);
+      backdrop-filter: blur(15px);
+      border-radius: 25px;
+      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.2);
+      padding: 40px;
+      text-align: center;
+      width: 90%;
+      max-width: 430px;
+      z-index: 2;
+      transition: all 0.3s ease;
+    }
+    #container:hover {
+      transform: scale(1.03);
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.25);
+    }
 
-.nav-links a {
-  color: white;
-  text-decoration: none;
-  transition: 0.3s;
-}
+    h1 {
+      font-size: 2rem;
+      color: #004aad;
+      margin-bottom: 20px;
+    }
 
-.nav-links a:hover {
-  color: #00adb5;
-}
+    input {
+      padding: 12px;
+      width: 70%;
+      border: none;
+      border-radius: 10px;
+      outline: none;
+      font-size: 1rem;
+      margin-bottom: 10px;
+      box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
+    }
 
-/* Hero Section */
-.hero {
-  background: linear-gradient(to right, #00adb5, #393e46);
-  color: white;
-  text-align: center;
-  padding: 100px 20px;
-}
+    button {
+      padding: 12px 18px;
+      background: #004aad;
+      border: none;
+      border-radius: 10px;
+      color: white;
+      cursor: pointer;
+      font-weight: bold;
+      transition: 0.3s;
+    }
+    button:hover {
+      background: #0077ff;
+      transform: scale(1.05);
+    }
 
-.hero span {
-  color: #fff200;
-}
+    #weather-box {
+      margin-top: 25px;
+      background: rgba(255, 255, 255, 0.5);
+      padding: 20px;
+      border-radius: 15px;
+      display: none;
+      animation: fadeIn 1s ease forwards;
+    }
 
-.btn {
-  background: #fff;
-  color: #00adb5;
-  padding: 10px 25px;
-  border-radius: 30px;
-  text-decoration: none;
-  font-weight: bold;
-  margin-top: 20px;
-  display: inline-block;
-  transition: 0.3s;
-}
+    @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
 
-.btn:hover {
-  background: #00adb5;
-  color: white;
-}
+    #weather-box img {
+      width: 100px;
+      height: 100px;
+    }
 
-/* Sections */
-.section {
-  padding: 60px 0;
-}
+    .details {
+      margin-top: 15px;
+      text-align: left;
+    }
 
-.bg-light {
-  background: #f4f4f4;
-}
+    .details p {
+      margin: 6px 0;
+      font-size: 1rem;
+    }
 
-h2 {
-  text-align: center;
-  margin-bottom: 30px;
-  color: #00adb5;
-}
+    .error {
+      color: red;
+      font-weight: bold;
+      margin-top: 15px;
+    }
 
-.skills-grid, .projects-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  gap: 20px;
-}
-
-.skill-card, .project-card {
-  background: white;
-  padding: 20px;
-  text-align: center;
-  border-radius: 10px;
-  box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-}
-
-.project-card h3 {
-  color: #222;
-}
-
-/* Contact */
-.contact-info p {
-  text-align: center;
-  margin: 8px 0;
-}
-
-.contact-info a {
-  color: #00adb5;
-  text-decoration: none;
-}
-
-/* Footer */
-.footer {
-  background: #222;
-  color: white;
-  text-align: center;
-  padding: 15px;
-}
-
+    /* Unit Toggle Switch */
+    .unit-toggle {
+      margin-top: 15px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 10px;
+      font-weight: bold;
+    }
+    .toggle-btn {
+      background: #fff;
+      color: #004aad;
+      border: 2px solid #004aad;
+      padding: 5px 10px;
+      border-radius: 20px;
+      cursor: pointer;
+      font-size: 0.9rem;
+      transition: 0.3s;
+    }
+    .toggle-btn.active {
+      background: #004aad;
+      color: white;
+    }
   </style>
-  <script defer src="script.js"></script>
 </head>
+
 <body>
-  <!-- Header Section -->
-  <header class="header">
-    <div class="container">
-      <h1 class="logo">Alekhya Reddy</h1>
-      <nav>
-        <ul class="nav-links">
-          <li><a href="#about">About</a></li>
-          <li><a href="#skills">Skills</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
+  <!-- Animations -->
+  <div class="sun"></div>
+  <div class="cloud one"></div>
+  <div class="cloud two"></div>
 
-  <!-- Hero Section -->
-  <section class="hero">
-    <div class="hero-content">
-      <h2>Hi, I’m <span>Alekhya</span></h2>
-      <p>A B.Tech student passionate about Web Development, Ethical Hacking & AI.</p>
-      <a href="#projects" class="btn">View My Work</a>
-    </div>
-  </section>
+  <!-- Weather App -->
+  <div id="container">
+    <h1>🌈 DayMate</h1>
+    <input type="text" id="cityInput" placeholder="Enter city name...">
+    <button id="getWeather">Search</button>
 
-  <!-- About Section -->
-  <section id="about" class="section">
-    <div class="container">
-      <h2>About Me</h2>
-      <p>
-        I’m a first-year B.Tech Computer Science student interested in creating digital solutions using web technologies and AI. 
-        I enjoy building clean, responsive websites and learning cybersecurity and data analysis.
-      </p>
+    <div class="unit-toggle">
+      <span>Unit:</span>
+      <button class="toggle-btn active" id="celsiusBtn">°C</button>
+      <button class="toggle-btn" id="fahrenheitBtn">°F</button>
     </div>
-  </section>
 
-  <!-- Skills Section -->
-  <section id="skills" class="section bg-light">
-    <div class="container">
-      <h2>My Skills</h2>
-      <div class="skills-grid">
-        <div class="skill-card">HTML5</div>
-        <div class="skill-card">CSS3</div>
-        <div class="skill-card">JavaScript</div>
-        <div class="skill-card">Python</div>
-        <div class="skill-card">Git & GitHub</div>
-        <div class="skill-card">Ethical Hacking Basics</div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Projects Section -->
-  <section id="projects" class="section">
-    <div class="container">
-      <h2>Projects</h2>
-      <div class="projects-grid">
-        <div class="project-card">
-          <h3>AI Code Debugger</h3>
-          <p>An AI-powered tool that helps detect and fix coding errors efficiently.</p>
-        </div>
-        <div class="project-card">
-          <h3>Sales Website</h3>
-          <p>A modern real estate landing page built to showcase villas and generate leads.</p>
-        </div>
-        <div class="project-card">
-          <h3>Portfolio Website</h3>
-          <p>A responsive personal portfolio showcasing my projects and skills.</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Contact Section -->
-  <section id="contact" class="section bg-light">
-    <div class="container">
-      <h2>Contact Me</h2>
-      <p>Feel free to reach out for collaborations or opportunities!</p>
-      <div class="contact-info">
-        <p><strong>Email:</strong> sangualekhyareddy@gmail.com</p>
-        <p><strong>LinkedIn:</strong> <a href="https://linkedin.com" target="_blank">linkedin.com/in/alekhya</a></p>
-        <p><strong>GitHub:</strong> <a href="https://github.com" target="_blank">github.com/alekhya</a></p>
-      </div>
-    </div>
-  </section>
-
-  <!-- Footer -->
-  <footer class="footer">
-    <p>© 2025 Alekhya Reddy. All Rights Reserved.</p>
-  </footer>
+    <div id="weather-box"></div>
+    <div class="error" id="errorMsg"></div>
+  </div>
 
   <script>
-    // Smooth Scroll Navigation
-document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-  anchor.addEventListener('click', function(e) {
-    e.preventDefault();
-    document.querySelector(this.getAttribute('href')).scrollIntoView({
-      behavior: 'smooth'
-    });
-  });
-});
+    const apiKey = '7054c00b0191950654eb3a4a61d11cc9';
+    const cityInput = document.getElementById("cityInput");
+    const weatherBox = document.getElementById("weather-box");
+    const errorMsg = document.getElementById("errorMsg");
+    const celsiusBtn = document.getElementById("celsiusBtn");
+    const fahrenheitBtn = document.getElementById("fahrenheitBtn");
 
+    let currentUnit = "metric"; // default °C
+
+    celsiusBtn.addEventListener("click", () => {
+      currentUnit = "metric";
+      celsiusBtn.classList.add("active");
+      fahrenheitBtn.classList.remove("active");
+      const lastCity = localStorage.getItem("lastCity");
+      if (lastCity) getWeather(lastCity);
+    });
+
+    fahrenheitBtn.addEventListener("click", () => {
+      currentUnit = "imperial";
+      fahrenheitBtn.classList.add("active");
+      celsiusBtn.classList.remove("active");
+      const lastCity = localStorage.getItem("lastCity");
+      if (lastCity) getWeather(lastCity);
+    });
+
+    async function getWeather(city) {
+      try {
+        errorMsg.textContent = "";
+        weatherBox.style.display = "block";
+        weatherBox.innerHTML = "<p>Loading...</p>";
+
+        const response = await fetch(`https://api.openweathermap.org/data/2.5/weather?q=${city}&appid=${apiKey}&units=${currentUnit}`);
+        if (!response.ok) throw new Error("City not found!");
+
+        const data = await response.json();
+        const icon = `https://openweathermap.org/img/wn/${data.weather[0].icon}@2x.png`;
+        const tempUnit = currentUnit === "metric" ? "°C" : "°F";
+        const speedUnit = currentUnit === "metric" ? "m/s" : "mph";
+
+        weatherBox.innerHTML = `
+          <h2>${data.name}, ${data.sys.country}</h2>
+          <img src="${icon}" alt="Weather icon">
+          <p><strong>${data.weather[0].main}</strong> - ${data.weather[0].description}</p>
+          <p>🌡 Temperature: ${data.main.temp} ${tempUnit}</p>
+          <div class="details">
+            <p>💧 Humidity: ${data.main.humidity}%</p>
+            <p>🌬 Wind Speed: ${data.wind.speed} ${speedUnit}</p>
+            <p>🔆 Pressure: ${data.main.pressure} hPa</p>
+            <p>🌅 Sunrise: ${new Date(data.sys.sunrise * 1000).toLocaleTimeString()}</p>
+            <p>🌇 Sunset: ${new Date(data.sys.sunset * 1000).toLocaleTimeString()}</p>
+          </div>
+        `;
+
+        localStorage.setItem("lastCity", city);
+      } catch (error) {
+        weatherBox.style.display = "none";
+        errorMsg.textContent = error.message;
+      }
+    }
+
+    document.getElementById("getWeather").addEventListener("click", () => {
+      const city = cityInput.value.trim();
+      if (city) {
+        getWeather(city);
+      } else {
+        errorMsg.textContent = "Please enter a city name!";
+      }
+    });
+
+    window.onload = () => {
+      const lastCity = localStorage.getItem("lastCity");
+      if (lastCity) {
+        cityInput.value = lastCity;
+        getWeather(lastCity);
+      }
+    };
   </script>
 </body>
 </html>
